--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue-vnode-syringe",
   "version": "1.0.0",
-  "description": "",
+  "description": "🧬 Mutate your vNodes with vNode Syringe 💉",
   "main": "dist/vnode-syringe.js",
   "scripts": {
     "build": "rollup -c --environment NODE_ENV:production",
