--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "rollup -c --environment NODE_ENV:production",
     "dev": "jest --watch",
     "test": "jest",
-    "lint": "eslint {src,test}"
+    "lint": "eslint {src,test}",
+    "version": "npm run build && git add dist"
   },
   "repository": {
     "type": "git",
