--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
       "pre-commit": "npm test"
     }
   },
+  "files": [
+    "dist"
+  ],
   "devDependencies": {
     "@babel/core": "^7.8.7",
     "@babel/preset-env": "^7.8.7",
