--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/vnode-syringe.js",
   "scripts": {
     "build": "rollup -c --environment NODE_ENV:production",
+    "dev-build": "rollup -cw",
     "dev": "jest --watch",
     "test": "jest",
     "lint": "eslint {src,test}",
@@ -30,6 +31,7 @@
   ],
   "devDependencies": {
     "@babel/core": "^7.8.7",
+    "@babel/plugin-transform-runtime": "^7.8.3",
     "@babel/preset-env": "^7.8.7",
     "@vue/test-utils": "^1.0.0-beta.32",
     "babel-jest": "^25.1.0",
@@ -38,7 +40,6 @@
     "eslint-plugin-import": "^2.20.1",
     "husky": "^4.2.3",
     "jest": "^25.1.0",
-    "jest-serializer-vue": "^2.0.2",
     "rollup": "^2.0.6",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-filesize": "^6.2.1",
