--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
   ],
   "devDependencies": {
     "@babel/core": "^7.8.7",
-    "@babel/plugin-transform-runtime": "^7.8.3",
     "@babel/preset-env": "^7.8.7",
     "@vue/test-utils": "^1.0.0-beta.32",
     "babel-jest": "^25.1.0",
@@ -45,7 +44,9 @@
     "rollup-plugin-filesize": "^6.2.1",
     "rollup-plugin-terser": "^5.3.0",
     "vue": "^2.6.11",
-    "vue-jest": "v4.0.0-beta.2",
     "vue-template-compiler": "^2.6.11"
+  },
+  "dependencies": {
+    "core-js": "^3.6.4"
   }
 }
