--- a/.eslintrc
+++ b/.eslintrc
@@ -4,6 +4,8 @@
 	"rules": {
 		"indent": "off",
 		"indent-legacy": ["error", "tab"],
-		"no-tabs": "off"
+		"no-tabs": "off",
+		"prefer-spread": "off",
+		"prefer-object-spread": "off"
 	}
 }
