--- a/package.json
+++ b/package.json
@@ -37,21 +37,21 @@
     }
   },
   "devDependencies": {
-    "@babel/core": "^7.8.7",
-    "@babel/preset-env": "^7.9.5",
-    "@vue/test-utils": "^1.0.0-beta.33",
-    "babel-jest": "^25.3.0",
-    "core-js": "^3.6.4",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.1.0",
-    "eslint-plugin-import": "^2.20.1",
-    "husky": "^4.2.3",
-    "jest": "^25.3.0",
-    "rollup": "^2.3.4",
+    "@babel/core": "^7.11.6",
+    "@babel/preset-env": "^7.11.5",
+    "@vue/test-utils": "^1.1.0",
+    "babel-jest": "^26.5.2",
+    "core-js": "^3.6.5",
+    "eslint": "^7.11.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.1",
+    "husky": "^4.3.0",
+    "jest": "^26.5.2",
+    "rollup": "^2.29.0",
     "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-filesize": "^7.0.0",
-    "rollup-plugin-terser": "^5.3.0",
-    "vue": "^2.6.11",
-    "vue-template-compiler": "^2.6.11"
+    "rollup-plugin-filesize": "^9.0.2",
+    "rollup-plugin-terser": "^7.0.2",
+    "vue": "^2.6.12",
+    "vue-template-compiler": "^2.6.12"
   }
 }
