--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "dev-build": "rollup -cw",
     "dev": "jest --watchAll",
     "test": "jest",
-    "lint": "eslint --cache ."
+    "lint": "xo"
   },
   "husky": {
     "hooks": {
@@ -34,7 +34,7 @@
   },
   "lint-staged": {
     "*.js": [
-      "eslint",
+      "xo",
       "jest --bail --findRelatedTests"
     ]
   },
@@ -44,9 +44,6 @@
     "@vue/test-utils": "^1.1.0",
     "babel-jest": "^26.5.2",
     "core-js": "^3.6.5",
-    "eslint": "^7.11.0",
-    "eslint-config-airbnb-base": "^14.2.0",
-    "eslint-plugin-import": "^2.22.1",
     "husky": "^4.3.0",
     "jest": "^26.5.2",
     "lint-staged": "^10.4.0",
@@ -55,6 +52,7 @@
     "rollup-plugin-filesize": "^9.0.2",
     "rollup-plugin-terser": "^7.0.2",
     "vue": "^2.6.12",
-    "vue-template-compiler": "^2.6.12"
+    "vue-template-compiler": "^2.6.12",
+    "xo": "^0.33.1"
   }
 }
